# bumperbot

./: manual_setup.bash
.claude/: settings.local.json
.devcontainer/: Dockerfile  devcontainer.json
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/bumperbot_bringup/share/bumperbot_bringup/: package.sh
install/bumperbot_controller/share/bumperbot_controller/: package.sh
install/bumperbot_cpp_examples/lib/bumperbot_cpp_examples/: simple_action_client_node  simple_action_server_node  simple_parameter  simple_publisher  simple_qos_publisher  simple_service_client  simple_service_server  simple_tf_kinematics
install/bumperbot_cpp_examples/share/bumperbot_cpp_examples/: local_setup.sh  package.sh
install/bumperbot_description/share/bumperbot_description/: local_setup.sh  package.sh
install/bumperbot_firmware/share/bumperbot_firmware/: package.bash  package.zsh
install/bumperbot_localization/share/bumperbot_localization/: local_setup.sh  package.sh
install/bumperbot_mapping/share/bumperbot_mapping/: package.sh
install/bumperbot_motion/include/bumperbot_motion/: pd_motion_planner.hpp
install/bumperbot_motion/share/bumperbot_motion/: local_setup.dsv  local_setup.sh  package.sh
install/bumperbot_msgs/share/bumperbot_msgs/: package.sh
install/bumperbot_navigation/share/bumperbot_navigation/: local_setup.sh  package.sh
install/bumperbot_navigation/share/bumperbot_navigation/behavior_tree/: simple_navigation.xml
install/bumperbot_navigation/share/bumperbot_navigation/config/: bt_navigator.yaml  planner_server.yaml
install/bumperbot_navigation/share/bumperbot_navigation/launch/: navigation.launch.py
install/bumperbot_planning/share/bumperbot_planning/: local_setup.dsv  local_setup.sh  package.sh  package.xml
install/nav2_common/share/nav2_common/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/nav2_msgs/share/nav2_msgs/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/nav2_smoother/share/nav2_smoother/: package.bash  package.zsh
install/nav2_voxel_grid/include/nav2_voxel_grid/: voxel_grid.hpp
install/nav2_voxel_grid/share/nav2_voxel_grid/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/nav_2d_msgs/share/nav_2d_msgs/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
log/: latest_build  latest_list
src/bumperbot_cpp_examples/: CMakeLists.txt  package.xml
src/bumperbot_cpp_examples/src/: simple_action_client.cpp  simple_action_server.cpp  simple_lifecycle_node.cpp  simple_publisher.cpp  simple_qos_publisher.cpp  simple_qos_subscriber.cpp  simple_subscriber.cpp
src/bumperbot_motion/: CMakeLists.txt
src/bumperbot_motion/include/bumperbot_motion/: pd_motion_planner.hpp
src/bumperbot_motion/src/: pd_motion_planner.cpp
src/bumperbot_navigation/: CMakeLists.txt  package.xml
src/bumperbot_navigation/config/: costmap.yaml  planner_server.yaml  smoother_server.yaml
src/bumperbot_navigation/launch/: navigation.launch.py
src/bumperbot_planning/: CMakeLists.txt  global_planner_plugins.xml  package.xml
src/bumperbot_planning/include/bumperbot_planning/: a_star_planner.hpp  dijkstra_planner.hpp
src/bumperbot_planning/src/: a_star_planner.cpp  dijkstra_planner.cpp
(+818 files in other folders)
